--- a/E3/P01_TheFutureOfCars/the-future-of-cars.css
+++ b/E3/P01_TheFutureOfCars/the-future-of-cars.css
@@ -1,2 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
+body {
+
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    color: #333333;
+    margin: 0;
+    padding: 0;
+}
+
+header.header {
+    background: url("images/car-future.jpg") no-repeat center;
+    background-size: cover;
+    height: 700px;
+}
+
