--- a/E3/P01_TheFutureOfCars/the-future-of-cars.css
+++ b/E3/P01_TheFutureOfCars/the-future-of-cars.css
@@ -15,3 +15,102 @@ header.header {
     height: 700px;
 }
 
+header.header h1 {
+    font-size: 80px;
+    font-family: 'Lato', sans-serif;
+    margin: 0;
+    padding: 80px 0 0 20px;
+    font-weight: 900;
+    color: #b38575;
+    text-transform: uppercase;
+}
+
+nav {
+    margin: 20px;
+    float: right;
+}
+
+nav ul {
+    margin: 0;
+    padding: 7px;
+    height: 20px;
+    line-height: 20px;
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a {
+    text-transform: uppercase;
+}
+
+a {
+    color: #333;
+    padding: 5px 7px 10px 7px;
+    font-size: 1em;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #b38575;
+}
+
+main.content section {
+    padding-left: 25px;
+    padding-right: 25px;
+    text-align: justify;
+}
+
+main.content section article {
+    margin-bottom: 20px;
+}
+
+main.content section article img {
+
+    width: 350px;
+    height: 260px;
+    margin-right: 15px;
+    float: left;
+}
+
+main.content section article p {
+    font-size: 18px;
+    color: #333333;
+    margin: 0;
+    padding: 20px;
+}
+
+main.content section article p:first-letter {
+    font-size: 32px;
+    color: #b38575;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+main.content section article h2 {
+
+    font-weight: 900;
+    color: #b38575;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+main.content section article:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+footer {
+    background-color: #ccc;
+}
+
+footer span {
+    margin: auto;
+    display: block;
+    padding: 10px;
+    color: #333333;
+    text-align: center;
+}
