--- a/E3/P02_FoodPage/food-page.css
+++ b/E3/P02_FoodPage/food-page.css
@@ -18,6 +18,7 @@ header h1 {
 
 div.content {
     margin-left: 100px;
+    margin-right: 100px;
 }
 
 article button {
@@ -35,6 +36,33 @@ article button:hover {
     cursor: pointer;
 }
 
+div {
+    max-width: 1140px;
+    float: left;
+}
+
+article {
+    font-size: 24px;
+}
+
+article img {
+    width: 1160px;
+}
+
+article p {
+    margin: 3px
+}
+
+article button {
+    font-size: 27px;
+    margin: 20px;
+}
+
 aside {
     float: right;
+}
+
+aside {
+    margin-top: 30px;
+    font-size: 24px;
 }
