--- a/E3/P03_JapaneseKitchen/japanese-kitchen.css
+++ b/E3/P03_JapaneseKitchen/japanese-kitchen.css
@@ -6,14 +6,14 @@
 }
 
 body {
-    background: url("images/dark-wood.jpg");
+    /*         background: url("images/dark-wood.jpg"); */
     text-align: center;
-    font: 14px 'Lato', sans-serif
+    font: 14px 'Lato', sans-serif;
 }
 
 header {
     background: url("images/header-page.jpg") no-repeat center;
-    height: 130px;
+    display: block;
 }
 
 header h1 {
@@ -21,4 +21,26 @@ header h1 {
     line-height: 120px;
     font-size: 30px;
     width: 97%;
+}
+
+nav ul {
+    list-style-type: none;
+    overflow: hidden;
+    background: url("images/header-page.jpg");
+}
+
+nav ul li {
+    float: left;
+}
+
+nav ul li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 7px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
 }
