--- a/L5/P02_Autumn/Golden-Autumn.css
+++ b/L5/P02_Autumn/Golden-Autumn.css
@@ -75,8 +75,7 @@ figure {
 }
 
 button {
-    border: 2px dashed;
-    border-Color: #685d50;
+    border: 2px dashed #685d50;
     background: #bcbc09;
     color: yellow;
     width: 120px;
