--- a/E3/P02_FoodPage/food-page.css
+++ b/E3/P02_FoodPage/food-page.css
@@ -22,22 +22,22 @@ div.content {
 }
 
 article button {
-    border: 1px solid;
+    margin-top: 0;
     border-radius: 12px;
     text-align: center;
     width: 180px;
-    border-color: red;
     background: none;
 
     color: #ec5353;
     font-size: 27px;
+    padding: 5px 10px;
+    border: 1px solid #ec5353;
 }
 
 article button:hover {
-    background-color: #ec5353;
-
-    cursor: pointer;
     color: white;
+    background-color: #ec5353;
+    cursor: pointer;
 }
 
 div {
