--- a/E3/P03_JapaneseKitchen/japanese-kitchen.css
+++ b/E3/P03_JapaneseKitchen/japanese-kitchen.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background: url("images/dark-wood.jpg");
+    /*background: url("images/dark-wood.jpg");*/
     text-align: center;
     font: 14px 'Lato', sans-serif;
 }
