--- a/E3/P03_JapaneseKitchen/japanese-kitchen.css
+++ b/E3/P03_JapaneseKitchen/japanese-kitchen.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 14px;
 
     /*background: url("images/dark-wood.jpg");*/
