--- a/E3/P03_JapaneseKitchen/japanese-kitchen.css
+++ b/E3/P03_JapaneseKitchen/japanese-kitchen.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
 * {
-    /*margin: 0;*/
     padding: 0;
     max-width: 1024px;
     margin: auto;
@@ -15,7 +14,7 @@ body {
 }
 
 header {
-    width: 1024px;
+    /*! width: 1024px; */
     margin: auto;
     background: url("images/header-page.jpg");
     background-size: cover;
@@ -34,5 +33,9 @@ nav {
 }
 
 ul {
-    /*text-decoration: none;*/
+    text-decoration: none;
+}
+
+li {
+    float: left;
 }
