--- a/E3/P03_JapaneseKitchen/japanese-kitchen.css
+++ b/E3/P03_JapaneseKitchen/japanese-kitchen.css
@@ -33,9 +33,23 @@ nav {
 }
 
 ul {
-    text-decoration: none;
+    list-style-type: none;
+    overflow: hidden;
+    background-color: black;
 }
 
 li {
     float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: silver;
 }
