--- a/E3 - Introduction to CSS/P03_JapaneseKitchen/japanese-kitchen.css
+++ b/E3 - Introduction to CSS/P03_JapaneseKitchen/japanese-kitchen.css
@@ -1,48 +1,45 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 * {
-    margin: auto;
+    margin: 0;
     padding: 0;
-    max-width: 940px;
 }
 
 body {
-    font: 14px 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
 }
 
 header {
-    background: url("images/header-page.jpg") no-repeat;
-
     height: 130px;
+    line-height: 143px;
+    background: url("images/header-page.jpg");
+    background-size: cover;
+    width: 1024px;
+    margin: 0 auto;
 }
 
 header h1 {
-    line-height: 134px;
     text-align: right;
-    padding-right: 15px;
+    padding-right: 20px;
+    color: black;
 }
 
 nav {
     width: 1024px;
-    margin: auto;
-}
-
-nav ul {
-    list-style-type: none;
-    overflow: hidden;
+    margin: 0 auto;
     background: url("images/header-page.jpg");
+    background-size: cover;
+    border-top: 2px solid black;
+    border-bottom: 4px solid black;
 }
 
-nav li {
-    float: left;
+nav ul li {
+    display: inline-block;
 }
 
-nav li a {
-    display: block;
+nav ul li a {
     color: white;
-    text-align: center;
-    padding: 14px 16px;
+    padding: 10px;
     text-decoration: none;
-}
-
-nav li a:hover {
-    background-color: silver;
 }
