--- a/E3 - Introduction to CSS/P03_JapaneseKitchen/japanese-kitchen.css
+++ b/E3 - Introduction to CSS/P03_JapaneseKitchen/japanese-kitchen.css
@@ -8,6 +8,8 @@
 body {
     font-family: 'Lato', sans-serif;
     font-size: 14px;
+    width: 1024px;
+    margin: 0 auto;
 }
 
 header {
@@ -15,8 +17,6 @@ header {
     line-height: 143px;
     background: url("images/header-page.jpg");
     background-size: cover;
-    width: 1024px;
-    margin: 0 auto;
 }
 
 header h1 {
@@ -26,8 +26,6 @@ header h1 {
 }
 
 nav {
-    width: 1024px;
-    margin: 0 auto;
     background: url("images/header-page.jpg");
     background-size: cover;
     border-top: 2px solid black;
@@ -42,4 +40,38 @@ nav ul li a {
     color: white;
     padding: 10px;
     text-decoration: none;
+}
+
+article {
+    float: left;
+
+}
+
+article figure {
+    float: left;
+    padding: 16px;
+}
+
+article p {
+    width: 400px;
+}
+
+article div h2 {
+    font-size: 35px;
+}
+article div h3 {
+    font-size: 35px;
+    font-weight: normal;
+}
+
+article p {
+    font-size: 20px;
+    width: 470px;
+    float: right;
+}
+
+article {
+    border-right: 0.5px solid silver;
+    width: 800px;
+    max-width: 800px;
 }
