--- a/L06 - CSS Positioning/P01_SocialMedia/social-media.css
+++ b/L06 - CSS Positioning/P01_SocialMedia/social-media.css
@@ -41,3 +41,36 @@ footer > section > div div {
     background: url("images/social.jpg");
     display: inline-block;
 }
+
+.twitter {
+    background-position: 772px 126px;
+}
+
+.linkedin {
+    background-position: 642px 126px;
+}
+
+.youtube {
+    background-position: 325px 126px;
+}
+
+.facebook, .twitter, .youtube, .linkedin {
+    cursor: pointer;
+}
+
+.facebook:hover {
+    background-position: 0 60px;
+}
+
+.linkedin:hover {
+    background-position: 642px 63px;
+}
+
+.youtube:hover {
+    background-position: 325px 63px;
+}
+
+.twitter:hover {
+    background-position: -66px 63px;
+}
+
