--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.css
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.css
@@ -62,8 +62,7 @@ nav ul.nav-primary {
     color: #ffffff;
     font-size: 60px;
     text-align: center;
-    margin-top: 100px;
-    margin-bottom: 50px;
+    margin: 100px 0 50px 0;
     text-transform: uppercase;
 }
 
@@ -99,6 +98,7 @@ nav ul.nav-primary {
 
 .consulting-rev i {
     color: #c79d63;
+    background: none;
 }
 
 /*nav ul.nav-primary {*/
