--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.css
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.css
@@ -145,3 +145,47 @@ main p {
 main p, h2 {
     text-align: left;
 }
+
+main p {
+    font-size: 16px;
+    margin: 10px 0 0;
+    text-transform: none;
+    color: #000;
+}
+
+main p, h2 {
+    text-align: left;
+}
+
+h5 {
+    text-align: center;
+    font-size: 24px;
+    width: 520px;
+    margin: 0 auto;
+}
+
+.banner span {
+    color: #c79d63;
+}
+
+.banner {
+    margin-bottom: 0;
+    padding-top: 35px;
+    padding-bottom: 46px;
+    margin-top: 40px;
+    display: block;
+    position: relative;
+}
+
+.banner::after {
+    content: "";
+    background-size: cover;
+    opacity: 0.3;
+    background: url(images/steel-bg.jpg) center center;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+}
