--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.css
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.css
@@ -189,3 +189,56 @@ h5 {
     position: absolute;
     z-index: -1;
 }
+
+.traders {
+    margin: 0;
+    padding-top: 35px;
+    padding-bottom: 46px;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url('images/background-choose-us.jpg') no-repeat center;
+    background-size: cover;
+}
+
+.traders h2 {
+    text-align: center;
+    font-size: 40px;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.article-container {
+    display: flex;
+    justify-content: center;
+}
+
+.article-container a {
+    margin-right: 30px;
+    padding: 20px;
+    width: 300px;
+    border: 2px solid #c79d63;
+    text-align: center;
+    text-decoration: none;
+}
+
+.article-container a:hover,
+.article-container a:hover p,
+.article-container a:hover h4 {
+    background: #fff;
+    color: #090821;
+}
+
+.article-container h4 {
+    color: #fff;
+    margin: 0 0 17px 17px;
+    padding-top: 21px;
+    letter-spacing: 0;
+    font-size: 20px;
+}
+
+.article-container p {
+    margin: 0 0 17px 17px;
+    font-size: 13px;
+    line-height: 18px;
+    color: #ffffff;
+}
+
