--- a/E05 - CSS Formatting/P01_BookReview/book-review.css
+++ b/E05 - CSS Formatting/P01_BookReview/book-review.css
@@ -21,3 +21,153 @@ nav ul li a {
     text-decoration: none;
     color: #a4a8a9;
 }
+
+nav ul {
+    padding: 20px 20px 0 20px;
+    float: Right;
+}
+
+nav ul li {
+    display: inline-block;
+    text-decoration: none;
+    margin-right: 20px;
+    padding-bottom: 23px;
+}
+
+nav ul li a:hover {
+    cursor: pointer;
+    border-bottom-color: #70e9ff;
+    color: #333;
+}
+
+section.logo {
+    position: Absolute;
+    z-index: 0;
+    top: 20px;
+    left: 550px;
+    background: #ea3d51;
+    width: 90px;
+    height: 90px;
+    padding: 20px;
+}
+
+h1.brand {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 50px;
+    font-weight: 900;
+    letter-spacing: 10px;
+    color: #ffffff;
+    margin-top: 72px;
+}
+
+main {
+    background-color: #CBD0D9;
+    width: 80%;
+    margin: auto;
+}
+
+h1.book-title {
+    position: relative;
+    z-index: 10;
+    color: #121f25;
+    font-size: 54px;
+    margin: 0;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+h5.book-genre {
+    position: relative;
+    z-index: 3;
+    top: -80px;
+    left: 80px;
+    color: #6dffb8;
+    font-size: 120px;
+    margin: 0;
+    text-align: center;
+}
+
+main section.book {
+    position: Relative;
+    z-index: 8;
+    margin: auto;
+    color: #64666f;
+    width: 300px;
+    padding: 40px;
+    text-align: left;
+    background: linear-gradient(to bottom, #eb3c53 0%, #e6135c 100%) no-repeat center center;
+}
+
+main section.book img {
+    display: Block;
+    margin: auto;
+    width: 100%;
+    max-width: 80px;
+    border-radius: 50%;
+}
+
+main section.book p::before, main section.book p::after {
+    /*content: ' " ';*/
+    color: #af213d;
+    font-size: 30px;
+    font-weight: 800;
+}
+
+main section.book p.text::before, main section.book p.text::after {
+    content: ' " ';
+}
+
+main section.book p.stars {
+    font-size: 25px;
+    margin: 10px;
+}
+
+main section.book button {
+    background: None;
+    border: 3px solid #70ecff;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #ffffff;
+    padding: 10px 25px;
+}
+
+main section.book button:hover {
+    /*! background: #70ecff; */
+    /*! border-color: #70ecff; */
+    color: #348098;
+}
+
+main section.char {
+    position: relative;
+    z-index: 4;
+    top: -250px;
+    background: #ffffff;
+    margin: 50px;
+    padding: 250px 35px 35px 35px;
+    width: 83%;
+}
+
+section.char h1 {
+    color: #46ee97;
+    font-size: 42px;
+}
+
+section.char p {
+    width: 70%;
+}
+
+section.char button {
+    background: none;
+    border: 3px solid #628291;
+    text-transform: uppercase;
+    font-size: 12px;
+    color: #333;
+    padding: 10px 25px;
+}
+
+section.char button:hover {
+    background: #628291;
+    cursor: pointer;
+    color: #6dffb8;
+}
