--- a/L09 - Responsive Design/P02_Contact_Form/contact-form.css
+++ b/L09 - Responsive Design/P02_Contact_Form/contact-form.css
@@ -1,8 +1,10 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+
 * {
     margin: 0;
     padding: 0;
 }
+
 body {
     margin: auto;
     background: #eaeaea;
@@ -10,17 +12,17 @@ body {
 }
 
 .info p {
-    text-align:center;
+    text-align: center;
     color: #999;
-    text-transform:none;
-    font-weight:600;
-    font-size:15px;
-    margin-top:2px
+    text-transform: none;
+    font-weight: 600;
+    font-size: 15px;
+    margin-top: 2px
 }
 
 form {
     border-radius: 5px;
-    width:700px;
+    width: 700px;
     margin: 10px auto;
     background-color: #FFFFFF;
     padding: 10px 20px;
@@ -34,11 +36,11 @@ p {
     margin: 0;
     font-weight: 500;
     line-height: 2;
-    color:#333;
+    color: #333;
 }
 
 h1 {
-    text-align:center;
+    text-align: center;
     color: #666;
     text-shadow: 1px 1px 0 #FFF;
     margin: 20px 0 0 0
@@ -70,19 +72,19 @@ textarea {
     background: #eeeeee;
     height: 40px;
     text-align: center;
-    line-height:40px;
+    line-height: 40px;
 }
 
 i {
-    color:#555;
+    color: #555;
 }
 
-.button-contact{
+.button-contact {
     background-color: #81BDA4;
     color: #FFF;
     text-align: center;
     width: 100%;
-    border:0;
+    border: 0;
     padding: 17px 25px;
     border-radius: 5px;
     cursor: pointer;
@@ -98,25 +100,27 @@ i {
 }
 
 .left-contact, .right-contact {
-    width:50%;
-    float:left;
+    width: 50%;
+    float: left;
     box-sizing: border-box;
     padding: 0 15px 0 0;
 }
 
 .right-contact {
-    float:right;
+    float: right;
     padding: 0 0 0 15px;
     border-right: none;
 }
 
+@media all and (max-width: 800px) {
+    form {
+        max-width: calc(100% - 40px);
+    }
+}
 
-
-
-/*TODO: @media all and (max-width: 800px) {*/
-
-/*}*/
-
-/*TODO: @media all and (max-width: 660px) {*/
-
-/*}*/
+@media all and (max-width: 660px) {
+    .left-contact, .right-contact {
+        width: 100%;
+        padding: 0;
+    }
+}
