--- a/E09 - Responsive Design/P01_Responsive_CV/responsive.css
+++ b/E09 - Responsive Design/P01_Responsive_CV/responsive.css
@@ -1,11 +1,42 @@
 @media screen and (max-width: 740px) {
-    /*TODO*/
+    #wrapper {
+        padding: 20px 15px;
+    }
+    h1 {
+        font-size: 4.5em;
+    }
+    h3 {
+        font-size: 2.2em;
+    }
+    h1, h3, h2, small {
+        text-align: center;
+    }
+    #info {
+        float: none;
+    }
+
+    #photo {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+    p {
+        padding: 0;
+    }
 }
 
 @media screen and (max-width: 570px) {
-    /*TODO*/
+    ul li {
+        display: inline-block;
+        width: 100px;
+    }
+    #skills-right ul li:nth-of-type(2) {
+        width: 140px;
+    }
 }
 
 @media screen and (max-width: 480px) {
-    /*TODO*/
-}
+    ul li {
+        padding-left: 16px;
+        background: url(img/bullet.png) -3px 5px no-repeat;
+    }}
