--- a/E09 - Responsive Design/P01_Responsive_CV/responsive.css
+++ b/E09 - Responsive Design/P01_Responsive_CV/responsive.css
@@ -2,15 +2,19 @@
     #wrapper {
         padding: 20px 15px;
     }
+
     h1 {
         font-size: 4.5em;
     }
+
     h3 {
         font-size: 2.2em;
     }
+
     h1, h3, h2, small {
         text-align: center;
     }
+
     #info {
         float: none;
     }
@@ -20,6 +24,7 @@
         width: 100%;
         text-align: center;
     }
+
     p {
         padding: 0;
     }
@@ -30,6 +35,7 @@
         display: inline-block;
         width: 100px;
     }
+
     #skills-right ul li:nth-of-type(2) {
         width: 140px;
     }
@@ -39,4 +45,5 @@
     ul li {
         padding-left: 16px;
         background: url(img/bullet.png) -3px 5px no-repeat;
-    }}
+    }
+}
