--- a/Exam Preparation/EP02/02.Best-Trip-Ever/best-trip-ever.css
+++ b/Exam Preparation/EP02/02.Best-Trip-Ever/best-trip-ever.css
@@ -1,6 +1,42 @@
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 @import "https://fonts.googleapis.com/css?family=Lato";
 
+
+
+@media screen and (max-width: 481px){
+    .top-button-container {
+        display: none;
+    }
+
+    .header-wrapper {
+        background: #333333;
+        display: flex;
+        justify-content: center;
+    }
+    .header-subtitle {
+        display: none;
+    }
+
+    .header-title {
+        width: 95%;
+    }
+
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .travel-section > * {
+        width: 100%;
+    }
+
+    .footer-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
